Add: Intro Panel Section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
     <main>
         <!-- introduction panel -->
         <section class="panel-intro">
-            <div class="intro-container"></div>
+            <div class="intro-container">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+
+                <!-- intro buttons -->
+                <div class="funzioni-intro">
+                    <div class="download-discord"><a class="button btn-white" href=""><i class="fa-regular fa-down-long"></i>Scarica per Mac</a></div>
+
+                    <div class="open-discord"><a class="button btn-black" href="">Apri Discord nel tuo Browser</a></div>
+
+                </div>
+                
+            </div>
         </section>
 
         <!-- main panels -->
