Add: first panel-main

--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
         <!-- main panels -->
         <section class="panel-white">
             <div class="panel-container">
-                <div class="blue-square"></div>
-                <div class="pink-square"></div>
+                <div class="blue-square">
+                    <img src="img/item1.svg" alt="img1-panelwhite">
+                </div>
+                <div class="pink-square">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
 
         </section>
