Add: Main Panel complete

--- a/index.html
+++ b/index.html
@@ -65,21 +65,36 @@
         </section>
         <section class="panel-grey">
             <div class="panel-container">
-                <div class="pink-square"></div>
-                <div class="blue-square"></div>
+                <div class="pink-square">
+                    <h2>Dove trovarsi é facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare</p>
+                </div>
+                <div class="blue-square">
+                    <img src="img/item2.svg" alt="img2-panelgrey">
+                </div>
             </div>
 
         </section>
         <section class="panel-white">
             <div class="panel-container">
-                <div class="blue-square"></div>
-                <div class="pink-square"></div>
+                <div class="blue-square">
+                    <img src="img/item3.svg" alt="img3-panelwhite">
+                </div>
+                <div class="pink-square">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. <br> Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                </div>
             </div>
             
         </section>
         <section class="panel-grey">
             <div class="panel-container">
-                <div class="green-square"></div>
+                <div class="green-square">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevii in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="img4-panelgreen">
+
+                </div>
             </div>
         </section>
 
