Add: Main Panel (adjust)

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevii in una sessione di disegno con la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="img4-panelgreen">
 
+                    <div class="main-bottom-button">
+                        <img src="img/stars.svg" alt="stars logo">
+                        <h2>Pronto all'avventura?</h2>
+                        <div class="download-discord"><a class="button btn-blue" href=""><i class="fa-regular fa-down-long"></i>Scarica per Mac</a></div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
