Add: Section Footer top

--- a/index.html
+++ b/index.html
@@ -110,15 +110,72 @@
     <!-- FOOTER -->
     <footer>
         <section class="footer-top">
-            <div class="footer-links">
-                <div class="darkpink-col"></div>
-                <div class="aqua-col"></div>
-                <div class="aqua-col"></div>
-                <div class="aqua-col"></div>
-                <div class="aqua-col"></div>
+            <div class="footer-links-socials">
+                <div class="darkpink-col">
+                    <h2>Il tuo posto per parlare</h2>
+                    <div class="ita-logo">
+                        <img src="img/ita.png" alt="logo cambia lingua">
+                        <a href="">Italiano</a>
+                        <span>&or;</span>
+                    </div>
+                    <div class="socials">
+                        <ul class="socials-buttons">
+                            <li><i class="fa-brands fa-twitter"></i></li>
+                            <li><i class="fa-brands fa-instagram"></i></li>
+                            <li><i class="fa-brands fa-facebook"></i></li>
+                            <li><i class="fa-brands fa-youtube"></i></li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="aqua-col">
+                    <ul class="footer-links">
+                        <h3>Prodotto</h3>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="aqua-col">
+                    <ul class="footer-links">
+                        <h3>Prodotto</h3>
+                        <li><a href="">Chi siamo</a></li>
+                        <li><a href="">Lavora con noi</a></li>
+                        <li><a href="">Marchio</a></li>
+                        <li><a href="">Redazione</a></li>
+                        <li><a href="">Negozio</a></li>
+                    </ul>
+                </div>
+                <div class="aqua-col">
+                    <ul class="footer-links">
+                        <h3>Prodotto</h3>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="aqua-col">
+                    <ul class="footer-links">
+                        <h3>Prodotto</h3>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
-
+        <hr>
         <section class="footer-bottom">
             <div class="footer-nav">
                 <div class="footer-logo">Logo</div>
