Add: Project complete

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <!-- intro buttons -->
                 <div class="funzioni-intro">
-                    <div class="download-discord"><a class="button btn-white" href=""><i class="fa-regular fa-down-long"></i>Scarica per Mac</a></div>
+                    <div class="download-discord"><a class="button btn-white" href=""><span><i class="fa-regular fa-down-long"></i></span> Scarica per Mac</a></div>
 
                     <div class="open-discord"><a class="button btn-black" href="">Apri Discord nel tuo Browser</a></div>
 
@@ -97,7 +97,7 @@
                     <div class="main-bottom-button">
                         <img src="img/stars.svg" alt="stars logo">
                         <h2>Pronto all'avventura?</h2>
-                        <div class="download-discord"><a class="button btn-blue" href=""><i class="fa-regular fa-down-long"></i>Scarica per Mac</a></div>
+                        <div class="download-discord"><a class="button btn-blue" href=""><span><i class="fa-regular fa-down-long"></i></span> Scarica per Mac</a></div>
                     </div>
                     
                 </div>
@@ -178,8 +178,11 @@
         <hr>
         <section class="footer-bottom">
             <div class="footer-nav">
-                <div class="footer-logo">Logo</div>
-                <div class="footer-button">Bottone</div>
+                <div class="footer-logo">
+                <img src="img/logo.svg" alt="Immagine Logo">
+                </div>
+                <div><a class="button btn-blue" href=""><span><i class="fa-regular fa-down-long"></i></span> Registati</a></div>
+                
 
             </div>
         </section>
