--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                     <div class="main-bottom-button">
                         <img src="img/stars.svg" alt="stars logo">
-                        <h2>Pronto all'avventura?</h2>
+                        <h3>Pronto a inziare la tua avventura?</h3>
                         <div class="download-discord"><a class="button btn-blue" href=""><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</a></div>
                     </div>
                     
